--- a/buy.html
+++ b/buy.html
@@ -69,12 +69,12 @@
     	<br/>
 
 		<h3>Buy LiClipse</h3>
-    	<strong>Pricing</strong>: A LiClipse license is US$ 80 (and renewing it is US$ 40)<br>
+    	<strong>Pricing</strong>: A LiClipse license is US$ 99 (and renewing it is US$ 59)<br>
     	<br/>
     	See the <a href="license.html">License terms</a> for details.
     	<br/>
     	<br/>
-    	Licenses may be purchased using <!-- SWREG: shut down (need to find another option) or -->  Paypal and will be delivered to e-mail
+    	Licenses may be purchased using Paypal or Stripe and will be delivered to e-mail
     	specified during the checkout process.<br>
     	<br>
     	To renew an existing license, please access:<br/><a href="https://www.brainwy.com/renew_liclipse_licence/">https://www.brainwy.com/renew_liclipse_licence/</a>
